# tonto-compiler

./: .gitignore  CMakeLists.txt  CarRental.tonto  ModePattern.tonto  PhasePattern.tonto  README.md  RelatorPattern.tonto  RoleMiximPattern.tonto  RolePattern.tonto  SubkindPattern.tonto  TesteSemantico.tonto  analisadorLexico  analisadorLexico.l  ast.cpp  ast.h  lexer.l  parser.cpp  parser.h  parser.y  stats.cpp  stats.h  teste.tonto  teste.txt  testeT.txt  tokens.h  tonto-compiler.cpp
Hospital_Model/: ConsultaMedica.tonto  HospitalMonobloco.tonto  Pessoa.tonto
Pizzaria_Model/: Cliente.tonto  CoberturasDePizza.tonto  Empresa.tonto  ItensDaPizzaria.tonto  Pessoa.tonto  Pizzaria.tonto
